# slopos

./: .gitignore  .gitmodules  .npmignore  AGENTS.md  Cargo.toml  INTERRUPT_ANALYSIS.md  Makefile  NPM_PUBLISHING.md  NPM_QUICKSTART.md  PUBLISH_CHECKLIST.md  README.md  TODO.md  display  fuck.txt  limine.cfg  limine.conf  link.ld  lksdjflöas  log2.txt  logs.txt  meson.build  meson_options.txt  package.json  rust-toolchain.toml  workflow.json  xe
.cargo/: config.toml
.sisyphus/: AI_WORK_COMPLETE.md  BARRIER_FIX_COMPLETE.md  BLOCKER.md  COMPLETION_SUMMARY.md  FINAL_AI_STATEMENT.txt  FINAL_STATUS.md  LOGGING_FIX_COMPLETE.md  ORCHESTRATION_COMPLETE.md  TODO_COMPLETION_STATEMENT.md  WORK_EXHAUSTED.md  boulder.json  boulder_complete.json
abi/: Cargo.toml
boot/: Cargo.toml  boot_drivers.c  boot_memory.c  boot_services.c  constants.h  cpu_defs.h  cpu_verify.c  cpu_verify.h  debug.c  debug.h  early_init.c  gdt.c  gdt.h  gdt_defs.h  idt.c  idt.h  idt_handlers.s  init.h  integration.h  kernel_panic.c  kernel_panic.h  limine_entry.s  limine_protocol.c  limine_protocol.h  log.c  safe_stack.c  shutdown.c  shutdown.h
boot/src/: apic_id.rs  boot_drivers.rs  boot_impl.rs  boot_memory.rs  boot_services.rs  cpu_verify.rs  early_init.rs  ffi_boundary.rs  gdt.rs  gdt_tests.rs  idt.rs  ist_stacks.rs  kernel_panic.rs  lib.rs  limine_protocol.rs  panic.rs  safe_stack.rs  shutdown.rs  shutdown_tests.rs  smp.rs
core/: Cargo.toml  context_switch.s
docs/: COMPOSITOR_ANALYSIS.md  PRIVILEGE_SEPARATION.md  VERIFICATION_SUMMARY.md  ffi_guidelines.md
drivers/: Cargo.toml  apic.c  apic.h  fate.c  fate.h  interrupt_test.c  interrupt_test.h  interrupt_test_config.c  ioapic.c  ioapic.h  irq.c  keyboard.c  legacy_irq.h  pci.c  pci.h  pci_driver.h  pic.c  pic_quiesce.c  pic_quiesce.h  pit.c  pit.h  random.c  random.h  rust_canvas_test.c  rust_ffi_test.c  serial.c  serial.h  serial_hw.h  syscall.c  syscall.h  syscall_common.c  syscall_common.h  syscall_core.c  syscall_fs.c  syscall_handlers.c  syscall_handlers.h  tty.c  virtio_gpu.c  virtio_gpu.h  wl_currency.c  (+1 more)
drivers/src/: apic.rs  fate.rs  input_event.rs  interrupt_test.rs  interrupt_test_config.rs  interrupts.rs  ioapic.rs  ioapic_tests.rs  irq.rs  keyboard.rs  lib.rs  mouse.rs  pci.rs  pic.rs  pit.rs  platform_init.rs  random.rs  sched_bridge.rs  scheduler_callbacks.rs  serial.rs  syscall.rs  syscall_common.rs  syscall_context.rs  syscall_fs.rs  syscall_handlers.rs  syscall_macros.rs  syscall_services_init.rs  syscall_types.rs  tty.rs  video_bridge.rs  virtio_blk.rs  virtio_gpu.rs  wl_currency.rs
drivers/src/hw/: apic_defs.rs  ioapic_defs.rs  mod.rs  pci_defs.rs  pic_defs.rs  pit_defs.rs  ps2_defs.rs  serial_defs.rs
drivers/src/ps2/: keyboard.rs  mod.rs  mouse.rs
drivers/src/virtio/: mod.rs  pci.rs  queue.rs
drivers/src/xe/: display.rs  forcewake.rs  ggtt.rs  mmio.rs  mod.rs  regs.rs
fs/: Cargo.toml  fileio.c  fileio.h  ramfs.c  ramfs.h  test_ramfs.c
fs/src/: blockdev.rs  ext2.rs  ext2_image.rs  ext2_state.rs  ext2_vfs.rs  fileio.rs  lib.rs  ramfs.rs  tests.rs
fs/src/devfs/: mod.rs
fs/src/ramfs/: mod.rs
fs/src/vfs/: init.rs  mod.rs  mount.rs  ops.rs  path.rs  traits.rs
kernel/: Cargo.toml
kernel/src/: ffi.rs  main.rs
knowledge/: README.md  index.py  query.py  requirements.txt
lib/: Cargo.toml  alignment.h  cpu.h  io.h  kdiag.c  kdiag.h  klog.c  klog.h  math.h  numfmt.c  numfmt.h  ring_buffer.h  spinlock.h  stacktrace.c  string.c  string.h  syscall_numbers.h  unit_test.c  user_syscall.h  user_syscall_defs.h
lib/src/: alignment.rs  cpu_local.rs  free_list.rs  init_flag.rs  io.rs  kdiag.rs  klog.rs  lib.rs  math.rs  memory.rs  numfmt.rs  panic_recovery.rs  pcr.rs  percpu.rs  ports.rs  preempt.rs  ring_buffer.rs  service_cell.rs  service_macro.rs  spinlock.rs  stacktrace.rs  string.rs  syscall_numbers.rs  user_syscall.rs  user_syscall_defs.rs
lib/src/sync/: level.rs  mod.rs  mutex.rs  rwlock.rs  token.rs
lib/src/testing/: assertions.rs  config.rs  fixture.rs  harness.rs  mod.rs  runner.rs  suite_masks.rs
lore/: GENESIS.md  THE_COOKED.md  THE_FORGE.md  THE_SLOPOCALYPSE.md
mcp/: package.json  tsconfig.json
mm/: Cargo.toml  buddy_alloc.c  kernel_heap.c  kernel_heap.h  mb2_parser.c  memory_init.c  memory_init.h  memory_layout.c  memory_layout.h  memory_reservations.c  memory_reservations.h  mm_constants.h  page_alloc.c  page_alloc.h  paging.c  paging.h  phys_virt.c  process_vm.c  process_vm.h  test_kernel_heap.c  test_process_vm.c  uefi_memory.c  user_copy.c  user_copy.h  user_copy_helpers.c  user_copy_helpers.h
plan/: compositor-refactor.md  (+1 more)
plans/: BOOT_STABILITY_FIXES.md  (+23 more)
rust/: .rustfmt.toml  Cargo.toml  meson.build
rust/bindings/: Cargo.toml  build.rs  wrapper.h
rust/bindings/src/: lib.rs
rust/drivers/: Cargo.toml
rust/graphics/: Cargo.toml  build.rs  cbindgen.toml
rust/graphics/src/: allocator.rs  buffer.rs  canvas.rs  ffi.rs  lib.rs
sched/: Cargo.toml  README.md  context_switch.s  draw_task.c  kthread.c  scheduler.c  scheduler.h  task.c  task.h  test_tasks.c
sched/src/: fate_api.rs  ffi_boundary.rs  kthread.rs  lib.rs  sched_impl.rs  scheduler.rs  task.rs  test_tasks.rs
tests/: Cargo.toml  core.c  core.h  interrupt_suite.c  interrupt_suite.h  stub_tests.c  system_suites.c  system_suites.h
tests/src/: exception_tests.rs  lib.rs
userland/: Cargo.toml  bootstrap.c  bootstrap.h  userland.ld
userland/src/: bootstrap.rs  compositor.rs  lib.rs  loader.rs  roulette.rs  runtime.rs  shell.rs  syscall.rs  theme.rs  ui_utils.rs
userland/src/apps/: file_manager.rs  mod.rs  sysinfo.rs
userland/src/gfx/: font.rs  mod.rs  primitives.rs
userland/src/libslop/: crt0.rs  malloc.rs  mod.rs  syscall.rs
video/: Cargo.toml  fb_config.h  font.c  font.h  framebuffer.c  framebuffer.h  graphics.c  graphics.h  roulette.c  roulette.h  roulette_core.c  roulette_core.h  roulette_user.c  splash.c  splash.h
video/src/: compositor_context.rs  font.rs  framebuffer.rs  graphics.rs  lib.rs  panic_screen.rs  roulette_core.rs  splash.rs  surface.rs
video/src/compositor/: api.rs  events.rs  mod.rs  queue.rs  surface.rs
(+137 files in other folders)
