[workspace]
members = [
  "boot",
  "drivers",
  "fs",
  "kernel",
  "lib",
  "mm",
  "sched",
  "userland",
  "video",
  "tests"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "GPL-3.0-only"

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
bitflags = { version = "2.4", default-features = false }
limine = { version = "0.2.0", default-features = false }
linked-list-allocator = { version = "0.10", default-features = false }
slopos-boot = { path = "boot" }
slopos-drivers = { path = "drivers" }
slopos-fs = { path = "fs" }
slopos-lib = { path = "lib" }
slopos-mm = { path = "mm" }
slopos-sched = { path = "sched" }
slopos-tests = { path = "tests" }
slopos-userland = { path = "userland" }
slopos-video = { path = "video" }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
uart_16550 = { version = "0.2", default-features = false }
x86_64 = { version = "0.14", default-features = false, features = ["instructions"] }
