[package]
name = "slopos-boot"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
slopos-lib = { workspace = true }
slopos-drivers = { workspace = true }
slopos-mm = { workspace = true }
slopos-sched = { workspace = true }
slopos-tests = { workspace = true }
slopos-video = { workspace = true }
