[package]
name = "slopos-fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
slopos-drivers = { workspace = true }
slopos-mm = { workspace = true }
slopos-lib = { workspace = true }
spin.workspace = true
