[package]
name = "slopos-fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

test = false
doctest = false
[dependencies]
slopos-mm = { workspace = true }
slopos-lib = { workspace = true }
slopos-abi = { workspace = true }
spin.workspace = true
