[package]
name = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
slopos-boot = { workspace = true }
slopos-drivers = { workspace = true }
slopos-fs = { workspace = true }
slopos-lib = { workspace = true }
slopos-mm = { workspace = true }
slopos-sched = { workspace = true }
slopos-userland = { workspace = true }
slopos-video = { workspace = true }

[lib]
test = false
doctest = false
