[package]
name = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
builtin-tests = ["slopos-boot/builtin-tests"]

[dependencies]
slopos-boot = { workspace = true }
slopos-core = { workspace = true }
slopos-drivers = { workspace = true }
slopos-fs = { workspace = true }
slopos-lib = { workspace = true }
slopos-mm = { workspace = true }
slopos-userland = { workspace = true }
slopos-video = { workspace = true }

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
