[package]
name = "slopos-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
builtin-tests = ["slopos-sched"]

[dependencies]
slopos-lib = { workspace = true }
slopos-drivers = { workspace = true }
slopos-mm = { workspace = true }
slopos-sched = { workspace = true, optional = true }
slopos-video = { workspace = true }
slopos-fs = { workspace = true }
spin.workspace = true
