[package]
name = "slopos-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

test = false
doctest = false
[features]
default = []
builtin-tests = []

[dependencies]
slopos-lib = { workspace = true }
slopos-core = { workspace = true }
slopos-drivers = { workspace = true }
slopos-mm = { workspace = true }
slopos-video = { workspace = true }
slopos-fs = { workspace = true }
spin.workspace = true
