[package]
name = "slopos-userland"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
slopos-drivers = { workspace = true }
slopos-video = { workspace = true }
slopos-boot = { workspace = true }
slopos-lib = { workspace = true }
slopos-sched = { workspace = true }
slopos-mm = { workspace = true }
