[package]
name = "slopos-video"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
slopos-drivers = { path = "../drivers" }
slopos-lib = { path = "../lib" }
spin = { workspace = true }

