[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
bindings = { workspace = true }

# Geometry and math (no_std compatible with libm)
euclid = { version = "0.22", default-features = false, features = ["libm"] }

# Embedded graphics (optional, for primitives)
embedded-graphics-core = { version = "0.4", default-features = false }

[build-dependencies]
cbindgen = { workspace = true }
bindgen = { workspace = true }
